# tw-daily-stock-picker

./: .env.example  .gitignore  README.md  news_handoff_notes_2026-06-14.txt  pyproject.toml
.github/workflows/: daily-news.yml  daily-stock-picker.yml  send-news-now.yml
config/: news_feeds.toml  strategy.toml  twse_holidays_2026.csv  watchlist.csv
src/tw_stock_picker/: __init__.py  calendar.py  cli.py  data.py  indicators.py  news.py  news_cli.py  report.py  settings.py  strategy.py  telegram.py
tests/: test_calendar.py  test_news.py  test_strategy.py  test_telegram.py
